option java_package = "fr.kissy.hellion.definition.encoder.proto";
option java_outer_classname = "SystemDto";
option java_generic_services = false;

import "Proto/Common/Property.proto";

message SystemProto {
    enum Type {
        None = 0;
        Generic = 1;
        AI = 2;
        Animation = 3;
        Audio = 4;
        Geometry = 5;
        Graphic = 6;
        Gui = 7;
        Input = 8;
        Network = 9; 
        Physic = 10;
    }
    required Type type = 1;
    repeated PropertyProto properties = 2;
}