option java_package = "fr.kissy.hellion.proto.definition";
option java_outer_classname = "GlobalDefinitionDto";
option java_generic_services = false;

import "Proto/Common/System.proto";
import "Proto/Common/Property.proto";

message GlobalDefinitionProto {
    required string startupScene = 1;
    repeated PropertyProto properties = 2;
    repeated SystemProto systems = 3;
    repeated string scenes = 4;
}